# src/swagger.json
@@ -535,6 +535,36 @@
                     ]
                 }
             },
+            "/api/user/{username}": {
+                "get": {
+                    "summary": "obtener datos de un usuario por su username",
+                    "tags": ["User"],
+                    "responses": {
+                        "200": {
+                            "description": "ok"
+                        }
+                    },
+                    "parameters": [
+                        {
+                            "in": "header",
+                            "name": "Authorization",
+                            "required": true,
+                            "schema": {
+                                "type": "string"
+                            }
+                        },
+                        {
+                            "in": "path",
+                            "name": "username",
+                            "description": "user",
+                            "required": true,
+                            "schema": {
+                                "type": "string"
+                            }
+                        }
+                    ]
+                }
+            },
             "/api/user/getallusers": {
                 "get": {
                     "summary": "obtener lista de todos los usuarios",
